After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 790905 - Default device name in Sync is not translatable
Default device name in Sync is not translatable
Status: RESOLVED FIXED
Product: epiphany
Classification: Core
Component: Sync
3.27.x
Other All
: Normal normal
: ---
Assigned To: Epiphany Maintainers
Epiphany Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-11-27 15:25 UTC by Piotr Drąg
Modified: 2017-11-30 15:03 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
sync-utils: Make default device name translatable (1.53 KB, patch)
2017-11-28 21:39 UTC, Gabriel Ivașcu
committed Details | Review

Description Piotr Drąg 2017-11-27 15:25:52 UTC
“%s’s GNOME Web on %s” is hard-coded. The default device name in Firefox is in the user’s language.
Comment 1 Gabriel Ivașcu 2017-11-28 21:39:07 UTC
Created attachment 364593 [details] [review]
sync-utils: Make default device name translatable
Comment 2 Gabriel Ivașcu 2017-11-30 15:03:01 UTC
Attachment 364593 [details] pushed as 70b8ccf - sync-utils: Make default device name translatable