sync-utils: Make default device name translatable

https://bugzilla.gnome.org/show_bug.cgi?id=790905